<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarker"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="10dip" >




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dip"
        android:paddingRight="20dip" >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/register"
            android:textColor="@color/colorPrimaryLight"
            android:id="@+id/textView"
            android:padding="20dip"
            android:layout_gravity="center_horizontal" />
        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:background="@drawable/round_shape"
            android:hint="@string/hint_name"
            android:padding="10dip"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/input_register"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:background="@drawable/round_shape"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dip"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:background="@drawable/round_shape"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:password="true" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_gender"
            android:textSize="14dip"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/input_register"
            android:textColorHint="@color/colorPrimary"
            android:clickable="true" />
        <Spinner android:id="@+id/genderlist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_shape"/>


        <EditText
            android:id="@+id/age"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_shape"
            android:hint="@string/hint_age"
            android:padding="10dip"
            android:singleLine="true"
            android:inputType="number|textCapWords"
            android:textColor="@color/input_register"
            android:textColorHint="@color/black" />


        <EditText
            android:id="@+id/contact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/round_shape"
            android:hint="@string/hint_contact"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/black"
            android:phoneNumber="true"
            android:inputType="phone" />

        <TextView
            android:id="@+id/collage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_collage"
            android:singleLine="true"
            android:textSize="14dip"
            android:inputType="textCapWords"
            android:textColor="@color/input_register"
            android:textColorHint="@color/colorPrimary"
            android:clickable="true" />

        <Spinner android:id="@+id/collagelist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_shape" />


        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/round_shape_button"
            android:text="@string/btn_register"
            android:layout_gravity="center"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:alpha="0.65"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="15dip" />
    </LinearLayout>

</ScrollView>